completed our features section

--- a/app/prepros-6.config
+++ b/app/prepros-6.config
@@ -44,12 +44,14 @@
         "assets/styles/modules/_page-section.scss",
         "assets/styles/modules/_headline.scss",
         "assets/styles/modules/_row.scss",
-        "assets/styles/modules/_generic-content-container.scss"
+        "assets/styles/modules/_generic-content-container.scss",
+        "assets/styles/modules/_section-title.scss",
+        "assets/styles/modules/_feature-item.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
