--- a/app/prepros-6.config
+++ b/app/prepros-6.config
@@ -46,7 +46,8 @@
         "assets/styles/modules/_row.scss",
         "assets/styles/modules/_generic-content-container.scss",
         "assets/styles/modules/_section-title.scss",
-        "assets/styles/modules/_feature-item.scss"
+        "assets/styles/modules/_feature-item.scss",
+        "assets/styles/modules/_testimonial.scss"
       ]
     }
   ],
