completed styling for the footer

--- a/app/prepros-6.config
+++ b/app/prepros-6.config
@@ -47,7 +47,8 @@
         "assets/styles/modules/_generic-content-container.scss",
         "assets/styles/modules/_section-title.scss",
         "assets/styles/modules/_feature-item.scss",
-        "assets/styles/modules/_testimonial.scss"
+        "assets/styles/modules/_testimonial.scss",
+        "assets/styles/modules/_site-footer.scss"
       ]
     }
   ],
