completed desktop and mobile header styles

--- a/app/prepros-6.config
+++ b/app/prepros-6.config
@@ -17,7 +17,8 @@
       "assets/styles/modules",
       "assets",
       "assets/styles",
-      "assets/styles/base"
+      "assets/styles/base",
+      "cssacssscssscssecsstcssscss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -48,12 +49,14 @@
         "assets/styles/modules/_section-title.scss",
         "assets/styles/modules/_feature-item.scss",
         "assets/styles/modules/_testimonial.scss",
-        "assets/styles/modules/_site-footer.scss"
+        "assets/styles/modules/_site-footer.scss",
+        "assets/styles/modules/_site-header.scss",
+        "assets/styles/modules/_primary-nav.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
