master back to normal

--- a/app/prepros-6.config
+++ b/app/prepros-6.config
@@ -51,7 +51,8 @@
         "assets/styles/modules/_testimonial.scss",
         "assets/styles/modules/_site-footer.scss",
         "assets/styles/modules/_site-header.scss",
-        "assets/styles/modules/_primary-nav.scss"
+        "assets/styles/modules/_primary-nav.scss",
+        "assets/styles/modules/_reveal-item.scss"
       ]
     }
   ],
