--- a/app/prepros-6.config
+++ b/app/prepros-6.config
@@ -15,7 +15,6 @@
   "fileTree": {
     "expandedDirs": [
       "assets/styles/modules",
-      "assets",
       "assets/styles",
       "assets/styles/base",
       "cssacssscssscssecsstcssscss"
@@ -56,7 +55,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
