100% completed a modal box

--- a/app/prepros-6.config
+++ b/app/prepros-6.config
@@ -15,7 +15,6 @@
   "fileTree": {
     "expandedDirs": [
       "assets/styles/modules",
-      "assets",
       "assets/styles",
       "assets/styles/base",
       "cssacssscssscssecsstcssscss"
@@ -51,12 +50,14 @@
         "assets/styles/modules/_testimonial.scss",
         "assets/styles/modules/_site-footer.scss",
         "assets/styles/modules/_site-header.scss",
-        "assets/styles/modules/_primary-nav.scss"
+        "assets/styles/modules/_primary-nav.scss",
+        "assets/styles/modules/_modal.scss",
+        "assets/styles/modules/_social-icons.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
