completed lazy loading of images

--- a/app/prepros-6.config
+++ b/app/prepros-6.config
@@ -17,7 +17,8 @@
       "assets/styles/modules",
       "assets/styles",
       "assets/styles/base",
-      "cssacssscssscssecsstcssscss"
+      "cssacssscssscssecsstcssscss",
+      "assets"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
