completed ready to merge with master

--- a/docs/prepros-6.config
+++ b/docs/prepros-6.config
@@ -9,11 +9,12 @@
     },
     {
       "path": "assets/styles/styles.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"temp/styles/styles.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"temp/styles/styles.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
+      "assets/styles/modules",
       "assets/styles",
       "assets/styles/base",
       "cssacssscssscssecsstcssscss",
@@ -57,7 +58,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
